Fixed % input width on mobile

--- a/style.css
+++ b/style.css
@@ -126,14 +126,14 @@ input[type="text"] {
   .botonDelete {
     top: 5px;
     height: 30px !important;
-    width: 25px !important;
+    width: 30px !important;
     font-size: 10px !important;
     text-align: center !important;
     padding: 0 5px !important;
   }
 
   input[type="number"].porcentaje {
-    max-width: 40px;
+    max-width: 75px;
   }
 
   footer {
